--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -356,7 +356,8 @@ NAVBAR
 }
 .navbar-brand {
   float: left;
-  padding: 0 15px;
+  /*padding: 0 15px;*/
+  padding-top: 10px;
   font-size: 20px;
   line-height: 22px;
   height: 40px;
