--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Black And White Bootstrap Landing Page / Portfolio</title>
+    <title>Caleb's Portfolio Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -27,15 +27,15 @@
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="120">
     <!-- intro-->
-    <section id="intro" style="background-image: url('img/ein-steig.jpg');" class="intro">      
+    <section id="intro" style="background-image: url('img/tree.jpg');" class="intro">
       <div class="overlay"></div>
       <div class="content">
         <div class="container clearfix">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-12">
-              <p class="italic">Oh, hello, nice to meet you!</p>
-              <h1>I am B&W Landing page or portfolio Theme.</h1>
-              <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p>
+              <p class="italic">Hello!</p>
+              <h1>I'm <span style="color: #4CAF50">Caleb Arrison</span>.</h1>
+              <p class="italic">Scroll down to find out more about me and what I've been working on...</p>
             </div>
           </div>
         </div>
@@ -48,7 +48,7 @@
         <div role="navigation" class="navbar navbar-default">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"><img src="img/logo.png" alt=""></a>
+              <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to">Caleb Arrison</a>
             </div>
             <div id="navigation" class="collapse navbar-collapse navbar-right">
               <ul class="nav navbar-nav">
@@ -70,10 +70,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2 class="heading">About me</h2>
-            <p class="lead">This can be an about section.</p>
-            <p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation. </p>
-            <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+            <h2 class="heading"><span style="color: #4CAF50">About me</span></h2>
+            <p class="lead">A little bit about myself...</p>
+            <p>I currently reside in Waynesburg, PA, where I live with my wife and two kids. I was working for an environmental company in Waynesburg when I was let go in March of 2016 due to downsizing. This gave me the opportunity to pursue a different career path, which is what led me to my current position at Mined Minds.</p>
+            <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Grahm. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. During the bootcamp we completed many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
           </div>
           <div class="col-md-5 col-md-offset-1">
             <p><img src="img/japan-mountains.jpg" alt="" class="img-responsive img-circle"></p>
@@ -116,7 +116,7 @@
       </div>
     </section>
     <!-- Services end-->
-    
+
     <!-- Portfolio / gallery-->
     <section id="portfolio" class="gallery">
       <div class="container clearfix">
@@ -188,7 +188,7 @@
     </section>
     <!-- text page end-->
     <!-- contact-->
-    <section id="contact" style="background-color: #fff;" class="text-page"> 
+    <section id="contact" style="background-color: #fff;" class="text-page">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -237,7 +237,7 @@
     </section>
     <div id="map"></div>
     <footer style="background-color: #111;" class="section-inverse">
-      <div class="container"> 
+      <div class="container">
         <div class="row copyright">
           <div class="col-md-6">
             <p>&copy;2015 Your name/company goes here</p>
