--- a/views/index.erb
+++ b/views/index.erb
@@ -76,7 +76,7 @@
             <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Grahm. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. During the bootcamp we completed many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
           </div>
           <div class="col-md-5 col-md-offset-1">
-            <p><img src="img/japan-mountains.jpg" alt="" class="img-responsive img-circle"></p>
+            <p><img src="img/pumpkin_farm.jpg" alt="" class="img-responsive img-circle"></p>
           </div>
         </div>
       </div>
@@ -87,13 +87,13 @@
       <div class="container">
         <div class="row services">
           <div class="col-md-12">
-            <h2 class="heading">Services</h2>
+            <h2 class="heading"><span style="color: #4CAF50">Skills</span></h2>
             <div class="row">
               <div class="col-sm-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-desktop"></i></div>
-                  <h4>Webdesign</h4>
-                  <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                  <div class="icon"><i class="fa fa-diamond" aria-hidden="true"></i></div>
+                  <h4>Ruby</h4>
+                  <p>This is the main language of the bootcamp that I graduated from. Ruby is a very intuitive language and fairly easy to pick up. I'm able to read, write, and test in Ruby.</p>
                 </div>
               </div>
               <div class="col-sm-4">
