--- a/views/index.erb
+++ b/views/index.erb
@@ -98,9 +98,9 @@
               </div>
               <div class="col-sm-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-print"></i></div>
-                  <h4>Print</h4>
-                  <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                  <div class="icon"><i class="fa fa-html5" aria-hidden="true"></i></div>
+                  <h4>HTML</h4>
+                  <p>HTML is the main language of the web. It tells the web how to translate your code into text and images. I'm able to read and write in HTML.</p>
                 </div>
               </div>
               <div class="col-sm-4">
