added css image and text to skills section

--- a/views/index.erb
+++ b/views/index.erb
@@ -105,9 +105,9 @@
               </div>
               <div class="col-sm-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-globe"></i></div>
-                  <h4>SEO and SEM</h4>
-                  <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                  <div class="icon"><i class="fa fa-css3" aria-hidden="true"></i></div>
+                  <h4>CSS</h4>
+                  <p>CSS is used to style most markup languages, like HTML. It gives us the option to syle our websites with different colors and fonts to make it look more presentable. I'm able to read and write in CSS.</p>
                 </div>
               </div>
             </div>
