added paragraph and ttt picture to portfolio section

--- a/views/index.erb
+++ b/views/index.erb
@@ -73,7 +73,7 @@
             <h2 class="heading"><span style="color: #4CAF50">About me</span></h2>
             <p class="lead">A little bit about myself...</p>
             <p>I currently reside in Waynesburg, PA, where I live with my wife and two kids. I was working for an environmental company in Waynesburg when I was let go in March of 2016 due to downsizing. This gave me the opportunity to pursue a different career path, which is what led me to my current position at Mined Minds.</p>
-            <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Grahm. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. During the bootcamp we completed many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
+            <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Graham. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. During the bootcamp we completed many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
           </div>
           <div class="col-md-5 col-md-offset-1">
             <p><img src="img/pumpkin_farm.jpg" alt="" class="img-responsive img-circle"></p>
@@ -124,13 +124,15 @@
           <div class="col-md-12">
             <div class="row">
               <div class="col-md-12 col-lg-8">
-                <h2 class="heading">Portfolio</h2>
-                <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                <h2 class="heading"><span style="color: #4CAF50">Portfolio</span></h2>
+                <p>As I'm still new to programming, I'll be updating this section often as I keep adding new projects to my portfolio. I'm proud of the work that I've done so far and I'll continue to look for projects that will challenge and inspire me to become a better programmer.</p>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 1" data-footer="Some footer information"><img src="img/portfolio-1.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 1" data-footer="Some footer information"><img src="img/ttt.png" alt="" class="img-responsive"></a>
+                  <p style="padding-top:20px;">Through out the bootcamp we worked our way through Tic-Tac-Toe. It's a bit more extensive than what one would think, but it was a fun project. Check out my final version here.</p>
+                </div>
               </div>
               <div class="col-sm-4">
                 <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
@@ -139,7 +141,7 @@
                 <div class="box"><a href="img/portfolio-3.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 3" data-footer="Some footer information"><img src="img/portfolio-3.jpg" alt="" class="img-responsive"></a></div>
               </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-sm-4">
                 <div class="box"><a href="img/portfolio-4.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
               </div>
@@ -160,7 +162,7 @@
               <div class="col-sm-4">
                 <div class="box"><a href="img/portfolio-9.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 9" data-footer="Some footer information"><img src="img/portfolio-9.jpg" alt="" class="img-responsive"></a></div>
               </div></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
