--- a/views/index.erb
+++ b/views/index.erb
@@ -113,6 +113,11 @@
             </div>
           </div>
         </div>
+        <div class="resume-button-div">
+          <center>
+            <a class="resume-button" href="https://drive.google.com/open?id=16CzZIohAX97Masw9Bnq1W6xGGL1fkOPXjlPoWjR0CExN-n6JXkktMEyR4eDhaibDiu2_fuXobavkaBNI" target="_blank">Download Resume Here</a>
+          </center>
+        </div>
       </div>
     </section>
     <!-- Services end-->
@@ -131,14 +136,18 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 1" data-footer="Some footer information"><img src="img/ttt.png" alt="" class="img-responsive"></a>
-                  <p style="padding-top:20px;">Through out the bootcamp we worked our way through Tic-Tac-Toe. It's a bit more extensive than what one would think, but it was a fun project. Check out my final version here.</p>
+                  <p>Throughout the bootcamp we worked our way through Tic-Tac-Toe. It's a bit more extensive than what one would think, but it was a fun project. Check out my final version here.</p>
                 </div>
               </div>
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><img src="img/teaching.jpg" alt="" class="img-responsive">
+                  <p>After graduating the bootcamp and working for Mined Minds I was given the opportunity to help teach other bootcamp classes. This was great experience and very valuable to understanding and learning more code.</p>
+                </div>
               </div>
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-3.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 3" data-footer="Some footer information"><img src="img/portfolio-3.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><img src="img/more_projects.jpg" alt="" class="img-responsive">
+                  <p>As I gain more experience and begin to learn new code I will be posting my future projects here, so come back and check it out!</p>
+                </div>
               </div>
             </div>
             <!-- <div class="row">
