--- a/views/index.erb
+++ b/views/index.erb
@@ -115,7 +115,7 @@
         </div>
         <div class="resume-button-div">
           <center>
-            <a class="resume-button" href="https://drive.google.com/open?id=16CzZIohAX97Masw9Bnq1W6xGGL1fkOPXjlPoWjR0CExN-n6JXkktMEyR4eDhaibDiu2_fuXobavkaBNI" target="_blank">Download Resume Here</a>
+            <a class="resume-button" href="https://drive.google.com/open?id=1wubPwSQnJyBRxp2MTXGcq8g5kNmXyfMC-v4H4wxTNGkV1T58fWNpMgJ_sSvaHMAhjhjMMwshVMRzExbq" target="_blank">Download Resume Here</a>
           </center>
         </div>
       </div>
@@ -135,7 +135,7 @@
             </div>
             <div class="row">
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 1" data-footer="Some footer information"><img src="img/ttt.png" alt="" class="img-responsive"></a>
+                <div class="box"><img src="img/ttt.png" alt="" class="img-responsive">
                   <p>Throughout the bootcamp we worked our way through Tic-Tac-Toe. It's a bit more extensive than what one would think, but it was a fun project. Check out my final version here.</p>
                 </div>
               </div>
@@ -178,7 +178,7 @@
     </section>
     <!-- Portfolio / gallery end-->
     <!-- text page-->
-    <section id="text" style="background-color: #333;" class="text-page section-inverse">
+    <!-- <section id="text" style="background-color: #333;" class="text-page section-inverse">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -196,10 +196,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- text page end-->
     <!-- contact-->
-    <section id="contact" style="background-color: #fff;" class="text-page">
+    <!-- <section id="contact" style="background-color: #eee;" class="text-page">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -239,23 +239,29 @@
               <div class="col-md-6">
                 <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
                 <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <div id="map"></div>
+    <div id="map"></div> -->
     <footer style="background-color: #111;" class="section-inverse">
       <div class="container">
         <div class="row copyright">
           <div class="col-md-6">
-            <p>&copy;2015 Your name/company goes here</p>
+            <!-- <p>&copy;2017 Caleb Arrison</p> -->
           </div>
-          <div class="col-md-6">
-            <p class="credit">Template by <a href="https://bootstrapious.com/tutorials">Bootstrapious</a></p>
-            <!-- Please do not remove the backlink to us unless you support the development at https://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :) -->
+          <div>
+            <p class="social">
+              <a href="https://www.facebook.com/caleb.arrison" target="_blank" title="" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/calebarrison" target="_blank" title="" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.linkedin.com/in/calebarrison/" target="_blank" title="" class="gplus"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <a href="https://github.com/Carrison57" target="_blank" title="" class="instagram"><i class="fa fa-github" aria-hidden="true"></i></a>
+              <a href="mailto:calebarrison@gmail.com" target="_top" title="" class="email"><i class="fa fa-envelope"></i></a>
+            </p>
           </div>
         </div>
       </div>
