fixed picture issue in in 'about' section

--- a/views/index.erb
+++ b/views/index.erb
@@ -76,7 +76,7 @@
             <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Graham. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. During the bootcamp we completed many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
           </div>
           <div class="col-md-5 col-md-offset-1">
-            <p><img src="img/pumpkin_farm.jpg" alt="" class="img-responsive img-circle"></p>
+            <p><img src="img/pumpkin_farm_revised.jpg" alt="" class="img-responsive img-circle"></p>
           </div>
         </div>
       </div>
