changed background color of skills section

--- a/views/index.erb
+++ b/views/index.erb
@@ -54,10 +54,10 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#intro">Home</a></li>
                 <li><a href="#about">About </a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#services">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#text">Text</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!-- <li><a href="#text">Text</a></li>
+                <li><a href="#contact">Contact</a></li> -->
               </ul>
             </div>
           </div>
@@ -73,7 +73,7 @@
             <h2 class="heading"><span style="color: #4CAF50">About me</span></h2>
             <p class="lead">A little bit about myself...</p>
             <p>I currently reside in Waynesburg, PA, where I live with my wife and two kids. I was working for an environmental company in Waynesburg when I was let go in March of 2016 due to downsizing. This gave me the opportunity to pursue a different career path, which is what led me to my current position at Mined Minds.</p>
-            <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Graham. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. During the bootcamp we completed many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
+            <p>In August, 2016 I attended a Full Stack Web Development Bootcamp led by Jonathan and Amanda Graham. I'm proud to say that in November, 2016 I graduated the boot camp and received a Full Stack Web Development Certificate. The bootcamp covered many skills, some of the main ones including: Ruby, Ruby on Rails, Sinatra, HTML, CSS, Bootstrap, and SQL.</p>
           </div>
           <div class="col-md-5 col-md-offset-1">
             <p><img src="img/pumpkin_farm_revised.jpg" alt="" class="img-responsive img-circle"></p>
@@ -83,7 +83,7 @@
     </section>
     <!-- about end-->
     <!-- Services-->
-    <section id="services" style="background-color: #eee">
+    <section id="services" style="background-color: #ccc">
       <div class="container">
         <div class="row services">
           <div class="col-md-12">
