--- a/views/index.erb
+++ b/views/index.erb
@@ -135,8 +135,8 @@
             </div>
             <div class="row">
               <div class="col-sm-4">
-                <div class="box"><img src="img/ttt.png" alt="" class="img-responsive">
-                  <p>Throughout the bootcamp we worked our way through Tic-Tac-Toe. It's a bit more extensive than what one would think, but it was a fun project. Check out my final version here.</p>
+                <div class="box"><a href="https://caleb-tic-tac-toe.herokuapp.com/" target="_blank"><img src="img/ttt.png" alt="" class="img-responsive"></a>
+                  <p>Throughout the bootcamp we worked our way through Tic-Tac-Toe. It's a bit more extensive than what one would think, but it was a fun project. Check out my final version <a href="https://caleb-tic-tac-toe.herokuapp.com/" target="_blank" style="color:blue;">here</a>.</p>
                 </div>
               </div>
               <div class="col-sm-4">
